[tool.poetry]
name = "gdrive-operator"
version = "0.1.0"
description = ""
authors = ["Ivaylo Atanasov <ivaylo.atanasov@adata.pro>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.65.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

